[gd_scene load_steps=6 format=2]

[ext_resource path="res://chest.gd" type="Script" id=1]
[ext_resource path="res://assets/tileset/Assets.png" type="Texture" id=2]
[ext_resource path="res://sound effects/chest/zapsplat_household_empty_chest_of_drawers_drawer_open_inside.mp3" type="AudioStream" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16.0016, 16.0343 )

[sub_resource type="Animation" id=2]
resource_name = "open"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[node name="chest" type="Area2D"]
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )
hframes = 4
region_enabled = true
region_rect = Rect2( 960, 176, 256, 80 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0.0250587, 3.89609 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/open = SubResource( 2 )

[node name="Tween" type="Tween" parent="."]

[node name="SoundChestOpen" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -20.0

[connection signal="body_entered" from="." to="." method="_on_chest_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_chest_body_exited"]
